@@ -23,6 +23,7 @@ Initial release to GitHub and also fresh project start. Major engine reengineeri
 [ + ] GetResourceByFileName method of interface IResourceManager.
 [ + ] Added some getters methods to IRender2D.
 [ + ] Added some advanced Draw, DrawBuffer and DrawBuffer3D methods to IRender2D for experienced users.
+[ + ] Interface IUserCallback allows to register callback classes in engine more simple.
 [ - ] Some old stuff (like plugins for browsers) was dropped off.
 [ - ] No editors and almost no 3D in this version also no third-party plugins. Functionallity will start to return in nearest next releases.
 
